allprojects  {
  apply plugin: 'maven-publish'
  group = 'org.slim3'
  version = slim3Version
}

subprojects {
  apply plugin: 'java'

  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17

  tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
  }
  tasks.withType(Test).configureEach {
    systemProperty "file.encoding", "UTF-8"
  }

  repositories {
    mavenCentral()
    mavenLocal()
    maven { url "https://maven.seasar.org/maven2" }
    maven { url "https://maven.seasar.org/maven2-snapshot" }
  }
}


